--- a/www/index.html
+++ b/www/index.html
@@ -100,6 +100,7 @@
         background-image: url("icon://open-menu-symbolic?size=32");
         background-repeat: no-repeat;
         background-position: center;
+        background-size: 20px;
         width: 48px;
         height: var(--header-height);
         transition: height 0.2s ease-in-out;
@@ -137,6 +138,7 @@
         height: 30px;
         background-repeat: no-repeat;
         background-position: center;
+        background-size: 20px;
         transition: all 0.2s ease-out;
         border: 0.1px solid transparent;
         border-radius: 4px;
@@ -483,6 +485,7 @@
         background: url(icon://go-down-symbolic?size=32);
         background-repeat: no-repeat;
         background-position: center;
+        background-size: 20px;
         border: 0;
         cursor: pointer;
     }
