--- a/www/index.html
+++ b/www/index.html
@@ -240,6 +240,7 @@
     .files-wrapper {
         flex: 1;
         overflow-y: auto;
+        overflow-x: hidden;
         min-height: calc(100vh - 38px);
         max-height: calc(100vh - 38px);
     }
@@ -425,7 +426,7 @@
         display: flex;
         flex-direction: column;
         margin-bottom: 10px;
-        max-width: 420px;
+        max-width: 75%;
         background: white;
         border-radius: 10px;
         margin: 0;
