Fix hover effect text distortion.
The hover effect on items was sometimes causing color distortion on the file
name text field. Scoping it to just the img fixed that.

--- a/www/index.html
+++ b/www/index.html
@@ -295,7 +295,7 @@
         transition: filter 0.15s ease-in-out;
     }
 
-    ul#files > li:hover {
+    ul#files > li:hover img {
         filter: brightness(117%);
     }
 
