--- a/www/index.html
+++ b/www/index.html
@@ -884,7 +884,7 @@
         <form class="stripe-lookalike" id="sign-up-tos">
             <h1>Welcome</h1>
 
-            <p>Please read and agree to the <a href="https://aerome.net/tos.html" target="_blank">Terms of Service</a> and our <a href="privacy_policy.html" onclick="event.preventDefault(), window.open(event.target.href)">Privacy Policy</a> before continuing.</p>
+            <p>Please read and agree to the <a href="https://aerome.net/tos.html" target="_blank">Terms of Service</a> and our <a href="https://aerome.net/privacy_policy.html" target="_blank">Privacy Policy</a> before continuing.</p>
 
             <label>
                 <input type="checkbox" id="sign-up-tos-confirmation" required>
