Add box shadow to accounts page

--- a/www/index.html
+++ b/www/index.html
@@ -594,6 +594,7 @@
         max-height: calc(100vh - 180px);
         overflow: auto;
         overflow-x: hidden;
+        box-shadow: 1px 1px 20px 2px var(--color-dim-gray);
     }
 
     #sign-up progress {
