Add keyboard shortcut for opening devtools when in a debug environment

--- a/www/index.html
+++ b/www/index.html
@@ -1502,6 +1502,12 @@
 
         document.addEventListener('keydown', e => {
             switch (event.key) {
+                case 'I': {
+                    if (event.ctrlKey && event.shiftKey) {
+                        rpc.invoke({ cmd: 'dev' });
+                    }
+                    break;
+                }
                 case 'l': {
                     if (event.ctrlKey) {
                         document.getElementById('folder').focus();
