--- a/www/index.html
+++ b/www/index.html
@@ -54,22 +54,44 @@
     html {
         margin: 0;
 
-        --color-dim-gray: #776d69ff;
-        --color-antique-white: #fef0ddff;
-        --color-raisin-black: #2a2727ff;
-        --color-night: #131313ff;
-        --color-chamoisee: #a47649ff;
+        --color-dim-gray: rgba(119, 109, 101, 1);
+        --color-dim-gray-semi-transparent: rgba(119, 109, 101, 0.7);
+
+        --color-antique-white: rgba(254, 240, 221, 1);
+        --color-antique-white-semi-transparent: rgba(254, 240, 221, 0.7);
+
+        --color-raisin-black: rgba(42, 39, 39, 1);
+        --color-raisin-black-semi-transparent: rgba(42, 39, 39, 0.7);
+
+        --color-night: rgba(19, 19, 19, 1);
+        --color-night-semi-transparent: rgba(19, 19, 19, 0.7);
+
+        --color-chamoisee: rgba(164, 118, 73, 1);
+        --color-chamoisee-semi-transparent: rgba(164, 118, 73, 0.7);
+
         --color-thistle: rgb(236, 201, 225);
-        --color-offwhite: #fafafa;
+        --color-thistle-semi-transparent: rgba(236, 201, 225, 0.7);
+
+        --color-offwhite: rgba(250, 250, 250, 1);
+        --color-offwhite-semi-transparent: rgba(250, 250, 250, 0.7);
+
+        --color-rum-red: rgba(237, 95, 116, 1);
+        --color-rum-red-semi-transparent: rgba(237, 95, 116, 0.7);
 
         --primary-bg: var(--color-raisin-black);
-        --primary-bg-semi-transparent: rgba(26, 25, 25, 0.7);
+        --primary-bg-semi-transparent: var(--color-raisin-black-semi-transparent);
 
         --primary-fg: var(--color-antique-white);
+        --primary-fg-semi-transparent: var(--color-antique-white-semi-transparent);
 
         --secondary-bg: var(--color-offwhite);
+        --secondary-bg-semi-transparent: var(--color-offwhite-semi-transparent);
+
         --secondary-fg: var(--color-night);
-        --secondary-pop: rgba(237, 95, 116, 1);
+        --secondary-fg-semi-transparent: var(--color-night-semi-transparent);
+
+        --secondary-pop: var(--color-rum-red);
+        --secondary-pop-semi-transparent: var(--color-rum-red-semi-transparent);
     }
 
     body {
@@ -916,6 +938,65 @@
     #account-information-aerome .unsubscribe:not([inert]) ~ button {
         width: 48%;
     }
+
+    #folder-context-menu {
+        opacity: 0;
+        pointer-events: none;
+
+        background: var(--secondary-bg);
+        color: var(--secondary-fg);
+
+        position: fixed;
+        top: 10px;
+        left: 10px;
+
+        display: flex;
+        flex-direction: column;
+        width: 220px;
+        height: 200px;
+        z-index: 10000000;
+        line-height: 1.7;
+        padding: 10px;
+        border-radius: 4px;
+        box-shadow: 2px 2px 10px 2px var(--color-dim-gray);
+    }
+
+    #folder-context-menu:not([aria-hidden]) {
+        opacity: 1;
+        pointer-events: all;
+    }
+
+    #folder-context-menu .divider {
+        width: 100%;
+        height: 1px;
+        background: var(--secondary-fg);
+        margin: 4px 0;
+    }
+
+    #folder-context-menu ul {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        padding: 0;
+        margin: 0;
+    }
+
+    #folder-context-menu ul li {
+        padding: 0 8px;
+    }
+
+    #folder-context-menu ul li.disabled {
+        color: var(--secondary-fg-semi-transparent);
+    }
+
+    #folder-context-menu ul li:not(.disabled):hover {
+        background: var(--primary-bg-semi-transparent);
+        color: var(--primary-fg);
+    }
+
+    #folder-context-menu ul li span {
+        cursor: default;
+    }
 </style>
 <body>
     <div id="sign-up" style="display: none">
@@ -1158,6 +1239,25 @@
             <button id="close-actions"></button>
         </div>
     </main>
+
+    <div id="folder-context-menu" inert aria-hidden=true>
+        <ul tabindex="-1">
+            <li><span>New Folder</span></li>
+            <li><span>New Document</span></li>
+
+            <div class="divider" aria-hidden=true></div>
+
+            <li class="disabled"><span>Paste</span></li>
+            <li><span>Select All</span></li>
+
+            <div class="divider" aria-hidden="true"></div>
+
+            <li><span>Inspect</span></li>
+        </ul>
+    </div>
+
+    <div id="files-context-menu" inert aria-hidden=true>
+    </div>
 
     <script>
         const ACCOUNTS_SERVER = new URL('http://localhost:9008');
@@ -2092,6 +2192,48 @@
             el.style.display = 'block';
             await anim.finished;
         }
+
+        window.addEventListener('contextmenu', e => {
+            e.preventDefault();
+
+            if (!e.target.closest('.files-wrapper')) {
+                return
+            }
+
+            const menu = document.getElementById('folder-context-menu');
+            const menuDimensions = menu.getBoundingClientRect();
+
+            const x = Math.min(e.x, window.innerWidth - menuDimensions.width - 6);
+            const y = Math.min(e.y, window.innerHeight - menuDimensions.height - 6);
+
+            menu.style.left = x + 'px';
+            menu.style.top = y + 'px';
+
+            menu.removeAttribute('aria-hidden');
+            menu.removeAttribute('inert');
+        });
+
+        document.addEventListener('click', e => {
+            if (e.target.closest('#folder-context-menu, #files-context-menu')) {
+                return
+            }
+
+            const menu = document.getElementById('folder-context-menu');
+
+            menu.setAttribute('aria-hidden', true);
+            menu.setAttribute('inert', true);
+        });
+
+        document.getElementById('folder-context-menu').addEventListener('click', e => {
+            // TODO
+            switch (e.target.textContent) {
+                case 'New Folder': break;
+                case 'New Document': break;
+                case 'Paste': break;
+                case 'Select All': break;
+                case 'Inspect': break;
+            }
+        });
 
         const debounce = (delay, cb) => {
             let id;
